@@ -1,3 +1,7 @@
+2009-07-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* photoimage.py, photoframe.py: Divided photoframe.py.
+
 2009-07-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* photoframe.py, gnomescreensaver.py, etc: Added support for
